# financial-app

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  ruff_base.toml  test_verify.py
app/: main.py
app/application/: __init__.py  stock_analyzer.py  technical_analyzer.py
app/config/: settings.py
app/core/: __init__.py  logging.py  monitoring.py
app/db/: __init__.py  cache_repo.py  connection.py  schema.py
app/domain/: validators.py
app/domain/models/: __init__.py  news.py  stock.py  technical.py
app/domain/services/: __init__.py  calculator.py  protocols.py  research_llm.py  research_nodos.py  research_service.py
app/infrastructure/: __init__.py
app/infrastructure/yfinance/: __init__.py  client.py  mapper.py  yfinance_technical_service.py
app/models/: __init__.py  financial_data.py
app/scrapers/: __init__.py  guru_focus_scraper.py
app/services/: __init__.py  alpha_vantage_service.py  data_aggregator.py  financial_calculator.py  protocols.py  stock_service.py
app/ui/: __init__.py  base_tab.py  components.py  render_kwargs.py  sidebar.py  tab_financials.py  tab_news.py  tab_prices.py  tab_summary.py  tab_technical.py  theme.py
app/ui/components/: __init__ 2.py  __init__.py  badges.py  charts.py  layout.py  loading.py  period_selector.py
app/ui/tabs/: __init__.py  (+9 more)
app/utils/: __init__.py  formatters.py  stocks.py
tests/: conftest.py  test_financial_calculator.py  test_models.py  test_stock_service.py  test_tab_prices.py  test_yfinance_client.py
