[project]
name = "financial-stre"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.2",
    "playwright>=1.58.0",
    "plotly>=6.6.0",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "requests>=2.31.0",
    "sentry-sdk>=2.57.0",
    "streamlit>=1.56.0",
    "watchdog>=6.0.0",
    "yfinance>=1.2.0",
    "langchain-core>=1.2.27",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.12",
    "langchain-huggingface>=1.2.1",
    "ddgs>=9.13.0",
    "langgraph>=1.1.6",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "rich>=14.3.3",
    "ruff>=0.15.8",
]

[tool.pytest.ini_options]
pythonpath = ["app"]


# Evita que pyright lance errores por imports faltantes
[tool.pyright]
reportMissingImports = false

[tool.mypy]
strict = true
